# prueba_uvicorn_fast_api

./: README.md  pyproject.toml
